--- a/templates/form.html
+++ b/templates/form.html
@@ -11,13 +11,13 @@
     <link rel="stylesheet" href="https://unpkg.com/flowbite@1.5.5/dist/flowbite.min.css" />
 
     <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            try {
-                document.getElementById("upload").style.display = "none"
-            } catch (e) {
-                alert(e)
-            }
-        });
+        // document.addEventListener('DOMContentLoaded', function() {
+        //     try {
+        //         document.getElementById("upload").style.display = "none"
+        //     } catch (e) {
+        //         alert(e)
+        //     }
+        // });
 
         function uploadSee() {
             try {
@@ -46,25 +46,12 @@
             var marks3 = document.forms["form"]["marks3"].value;
             // send form values to FastAPI using fetch API
             fetch("/api/create" + "?name=" + name + "&usn=" + usn + "&sem=" + sem + "&gender=" + gender + "&marks1=" + marks1 + "&marks2=" + marks2 + "&marks3=" + marks3)
-                // method: "GET",
-                // // body: JSON.stringify({
-                // //     name: name,
-                // //     usn: usn,
-                // //     sem: sem,
-                // //     gender: gender,
-                // //     marks1: marks1,
-                // //     marks2: marks2,
-                // //     marks3: marks3
-                // // }),
-                // headers: {
-                //     "Content-Type": "application/json"
-                // }
                 .then(response => response.json())
                 .then(data => {
                     window.close();
                 })
                 .catch(e => {
-                    alert(e)
+                    window.close();
                 });
         }
     </script>
@@ -116,11 +103,11 @@
                                             <input type="text" name="marks3" id="marks3" class="block w-full flex-1 rounded-none rounded-r-md border-gray-300 focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm" placeholder="Enter your mark 3" required>
                                         </div>
                                     </div>
-                                    <div class="px-4 py-3 sm:px-6 text-center">
+                                    <!-- <div class="px-4 py-3 sm:px-6 text-center">
                                         <button onclick="uploadSee()" class="Justify-center rounded-md border border-transparent bg-indigo-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">FILE UPLOAD</button>
-                                    </div>
+                                    </div> -->
 
-                                    <div id="upload">
+                                    <!-- <div id="upload">
                                         <div class="mt-1 flex justify-center rounded-md border-2 border-dashed border-gray-300 px-6 pt-5 pb-6">
                                             <div class="space-y-1 text-center">
                                                 <svg class="mx-auto h-12 w-12 text-gray-400" stroke="currentColor" fill="none" viewBox="0 0 48 48" aria-hidden="true">
@@ -136,7 +123,7 @@
                                                 <p class="text-xs text-gray-500">xlsx up to 10MB</p>
                                             </div>
                                         </div>
-                                    </div>
+                                    </div> -->
 
                                     <div class="px-4 py-3 sm:px-6 text-center">
                                         <input type="submit" value="Submit" class="Justify-center rounded-md border border-transparent bg-indigo-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2"></button>
