--- a/templates/form.html
+++ b/templates/form.html
@@ -11,28 +11,63 @@
     <link rel="stylesheet" href="https://unpkg.com/flowbite@1.5.5/dist/flowbite.min.css" />
 
     <script>
-        // document.addEventListener('DOMContentLoaded', function() {
-        //     try {
-        //         document.getElementById("upload").style.display = "none"
-        //     } catch (e) {
-        //         alert(e)
-        //     }
-        // });
+        document.addEventListener('DOMContentLoaded', function() {
+            try {
+                document.getElementById("upload").style.display = "none"
+            } catch (e) {
+                window.close();
+            }
+        });
 
         function uploadSee() {
-            try {
-                fo = document.getElementById("mainForm")
-                up = document.getElementById("upload")
-                if (up.style.display === "none") {
-                    fo.style.display = "none"
-                    up.style.display = "initial"
-                } else {
-                    fo.style.display = "initial"
-                    up.style.display = "none"
-                }
-            } catch (e) {
-                alert(e)
+            fo = document.getElementById("mainForm")
+            up = document.getElementById("upload")
+            var name = document.getElementById("name");
+            var usn = document.getElementById("usn");
+            var sem = document.getElementById("sem");
+            var gender = document.getElementById("gender");
+            var marks1 = document.getElementById("marks1");
+            var marks2 = document.getElementById("marks2");
+            var marks3 = document.getElementById("marks3");
+            if (up.style.display === "none") {
+                name.required = false
+                usn.required = false
+                sem.required = false
+                gender.required = false
+                marks1.required = false
+                marks2.required = false
+                marks3.required = false
+                fo.style.display = "none"
+                up.style.display = "initial"
+            } else {
+                name.required = true
+                usn.required = true
+                sem.required = true
+                gender.required = true
+                marks1.required = true
+                marks2.required = true
+                marks3.required = true
+                fo.style.display = "initial"
+                up.style.display = "none"
             }
+        }
+
+        // file-upload
+        function submitUpload() {
+
+            const fileInput = document.getElementById('file-upload');
+            const file = fileInput.files[0];
+
+            const formData = new FormData();
+            formData.append('file', file);
+
+            fetch('/uploadfile', {
+                    method: 'POST',
+                    body: formData
+                })
+                .then(response => response.json())
+                .then(data => window.close());
+
         }
 
         function submitForm() {
@@ -58,16 +93,19 @@
 </head>
 
 <body class="flex h-screen justify-center">
-    <div id="addform" class="items-center flex items-center justify-center max-w-full">
+    <div id="addform" class="flex items-center justify-center max-w-full">
         <div class="md:grid md:grid-cols-3 md:gap-6">
             <div class="mt-5 md:col-span-2 md:mt-0 ">
-                <form name="form" onsubmit="submitForm()" class="flex items-center">
+                <div class="px-4 py-3 sm:px-6 text-center flex items-center justify-center">
+                    <button id="viewButton" onclick="uploadSee()" class="Justify-center rounded-md border border-transparent bg-indigo-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">FILE UPLOAD</button>
+                </div>
+                <form name="form" id="mainForm" onsubmit="submitForm()" class="flex items-center">
                     <div class="shadow sm:overflow-hidden sm:rounded-md">
                         <div class="space-y-6 bg-white px-4 py-5 sm:p-6">
                             <label for="company-website" class="block text-lg text-bold font-medium text-gray-700">ADD STUDENT</label>
                             <div class="grid grid-cols-3 gap-6">
                                 <div class="col-span-3 sm:col-span-2">
-                                    <div id="mainForm">
+                                    <div>
                                         <div class="mt-1 flex rounded-md shadow-sm">
                                             <span class="inline-flex items-center rounded-l-md border border-r-0 border-gray-300 bg-gray-50 px-3 text-sm text-gray-500">NAME</span>
                                             <input type="text" name="name" id="name" class="block w-full flex-1 rounded-none rounded-r-md border-gray-300 focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm" placeholder="Enter your name" required>
@@ -103,11 +141,23 @@
                                             <input type="text" name="marks3" id="marks3" class="block w-full flex-1 rounded-none rounded-r-md border-gray-300 focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm" placeholder="Enter your mark 3" required>
                                         </div>
                                     </div>
-                                    <!-- <div class="px-4 py-3 sm:px-6 text-center">
-                                        <button onclick="uploadSee()" class="Justify-center rounded-md border border-transparent bg-indigo-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">FILE UPLOAD</button>
-                                    </div> -->
 
-                                    <!-- <div id="upload">
+                                    <div class="px-4 py-3 sm:px-6 text-center">
+                                        <input type="submit" value="Submit" class="Justify-center rounded-md border border-transparent bg-indigo-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2"></button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+                <form id="upload" name="form" onsubmit="submitUpload()" class="flex items-center">
+                    <div class="shadow sm:overflow-hidden sm:rounded-md">
+                        <div class="space-y-6 bg-white px-4 py-5 sm:p-6">
+                            <label for="company-website" class="block text-lg text-bold font-medium text-gray-700">ADD STUDENT</label>
+                            <div class="grid grid-cols-3 gap-6">
+                                <div class="col-span-3 sm:col-span-2">
+
+                                    <div>
                                         <div class="mt-1 flex justify-center rounded-md border-2 border-dashed border-gray-300 px-6 pt-5 pb-6">
                                             <div class="space-y-1 text-center">
                                                 <svg class="mx-auto h-12 w-12 text-gray-400" stroke="currentColor" fill="none" viewBox="0 0 48 48" aria-hidden="true">
@@ -115,7 +165,7 @@
                                             </svg>
                                                 <div class="flex text-sm text-gray-600">
                                                     <label for="file-upload" class="relative cursor-pointer rounded-md bg-white font-medium text-indigo-600 focus-within:outline-none focus-within:ring-2 focus-within:ring-indigo-500 focus-within:ring-offset-2 hover:text-indigo-500">
-                                                <span>Upload a excel file</span>
+                                                <span>Upload a excel/csv file</span>
                                                 <input id="file-upload" name="file-upload" type="file" class="sr-only">
                                               </label>
                                                     <p class="pl-1">or drag and drop</p>
@@ -123,11 +173,12 @@
                                                 <p class="text-xs text-gray-500">xlsx up to 10MB</p>
                                             </div>
                                         </div>
-                                    </div> -->
+                                    </div>
 
                                     <div class="px-4 py-3 sm:px-6 text-center">
                                         <input type="submit" value="Submit" class="Justify-center rounded-md border border-transparent bg-indigo-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2"></button>
                                     </div>
+
                                 </div>
                             </div>
                         </div>
